<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">环球车行</string>

    <!-- 通用的 -->
    <string name="common_phone_input_hint">请输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>

    <string name="common_code_input_hint">请输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>

    <string name="common_loading">加载中&#8230;</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>

    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>

    <string name="common_network">当前没有网络连接，请检查网络设置</string>

    <!-- 网络请求 -->
    <string name="http_loading">加载中&#8230;</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_account_error">账号异常，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

    <!-- 提示布局 -->
    <string name="hint_layout_no_data">空空如也</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>

    <!-- 地区对话框 -->
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>

    <!-- 日期对话框 -->
    <string name="date_title">请选择日期</string>

    <!-- 时间对话框 -->
    <string name="time_title">请选择时间</string>

    <!-- 升级对话框 -->
    <string name="update_title">发现新版本</string>

    <string name="update_content">更新内容</string>

    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>
    <string name="update_background">后台更新</string>

    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>

    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">立即安装</string>
    <string name="update_status_failed">下载失败</string>

    <string name="update_no_update">当前已是最新版本</string>

    <!-- 分享对话框 -->
    <string name="share_title">分享到&#8230;</string>

    <string name="share_platform_wechat">微信</string>
    <string name="share_platform_moment">朋友圈</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_link">复制链接</string>

    <string name="share_platform_copy_hint">已复制到剪贴板</string>

    <!-- 支付密码对话框 -->
    <string name="pay_title">请输入支付密码</string>

    <!-- 支付密码对话框 -->
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">租车</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <string name="login_other">其他登录方式</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_password_input_error">两次密码输入不一致，请重新输入</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>

    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>

    <string name="setting_update">检查更新</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>

    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>

    <string name="about_copyright">Copyright © 2018 &#8211; 2020</string>

    <!-- 忘记密码 -->
    <string name="password_forget_title">忘记密码</string>

    <!-- 重置密码 -->
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6&#8211;18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">密码重置成功</string>

    <!-- 校验手机号 -->
    <string name="phone_verify_title">手机号验证</string>
    <string name="phone_verify_current_phone">当前手机号：%s</string>

    <!-- 修改手机号 -->
    <string name="phone_reset_title">修改手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>

    <string name="phone_reset_commit_succeed">绑定成功，下次登录请使用新手机号登录</string>

    <!-- 个人资料 -->
    <string name="personal_data_title">编辑个人资料</string>
    <string name="personal_data_head">头像</string>

    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>

    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>

    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_phone_hint">立即绑定</string>

    <!-- 浏览器 -->
    <string name="web_title">网页加载中&#8230;</string>

    <!-- 异常捕捉 -->
    <string name="crash_error_hint">发生意外错误\n抱歉，给您带来不便</string>

    <string name="crash_error_restart">重新启动</string>
    <string name="crash_error_log">查看日志</string>

    <string name="crash_error_details">错误详情</string>
    <string name="crash_error_info">错误信息</string>
    <string name="crash_copy_log">复制日志</string>
    <string name="crash_close">关闭</string>

    <!-- 图片选择 -->
    <string name="photo_title">图片选择</string>
    <string name="photo_all">所有图片</string>

    <string name="photo_total">共 %d 张</string>

    <string name="photo_max_hint">本次最多只能选择 %d 张图片</string>

    <string name="photo_launch_fail">无法启动相机</string>
    <string name="photo_picture_error">图片错误</string>
    <string name="home_nav_pciture">拍照</string>
    <!-- 点赞选中 -->
    <string name="icon_like_fill">&#xe60d;</string>
    <!--评论-->
    <string name="icon_comment">&#xe621;</string>
    <!-- 微博 -->
    <string name="icon_weibo">&#xe620;</string>
    <!-- 微信 -->
    <string name="icon_wechat">&#xe61d;</string>
    <!-- 微信朋友圈 -->
    <string name="icon_friends">&#xe61c;</string>
    <!-- QQ -->
    <string name="icon_qq">&#xe61e;</string>
    <!-- QQ空间 -->
    <string name="icon_qq_space">&#xe61f;</string>
    <!-- 更多 -->
    <string name="icon_more">&#xe61b;</string>
    <!-- 地理位置 -->
    <string name="icon_location_fill">&#xe624;</string>

    <string name="trans">trans</string>

    <string name="view_pager_bottom_sheet_behavior" translatable="false" tools:ignore="ExtraTranslation">
        com.goobird.common.application.widget.bottomsheetdialog.viewpagerofbottomsheet.ViewPagerBottomSheetBehavior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ar_record">开始录制</string>
    <string name="ar_stop">停止录制</string>
    <string name="speed_super_slow">极慢"</string>
    <string name="speed_slow">慢"</string>
    <string name="speed_normal">正常"</string>
    <string name="speed_fast">快"</string>
    <string name="speed_super_fast">极快"</string>
    <string name="speed_range">分段变速</string>


    <string name="dlg_save_draft_title">输入草稿标题</string>
    <string name="dlg_save_draft_yes">保存</string>
    <string name="toast_draft_title_exist">已存在相同标题的草稿</string>
    <string name="toast_draft_save_success">草稿保存成功</string>
    <string name="toast_draft_save_fail">草稿保存失败</string>
    <string name="toast_draft_recover_success">草稿恢复成功</string>
    <string name="toast_draft_recover_fail">草稿恢复失败</string>
    <string name="dlg_delete_draft">确认删除草稿</string>
    <string name="upload">上传</string>
    <string name="cancel_upload">取消上传</string>
    <string name="if_edit_video">是否编辑视频</string>
    <string name="dlg_yes">是</string>
    <string name="dlg_no">否</string>


    <string name="desc_duration">持续时间</string>
    <string name="desc_transition_time">转场时间</string>
    <string name="desc_second">秒</string>
    <string name="desc_ms">ms</string>
    <string name="desc_paint_color">画笔颜色</string>
    <string name="desc_paint_size">画笔大小</string>
    <string name="desc_paint_undo">撤销</string>
    <string name="desc_paint_clear">清除</string>
    <string name="desc_image_tip">请选择所需的贴图！</string>
    <string name="desc_compose_display_tip">展现方式：</string>
    <string name="desc_compose_display_full">全屏</string>
    <string name="desc_compose_display_fit">自适应</string>

    <item name="selector_view" type="id"></item>
    <item name="rect_view" type="id"></item>

    <string name="str_tiktok_1">抖音 (RecyclerView)</string>


</resources>