<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.activity.PersonalDataActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personal_data_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.sam.rental.widget.CircleImageView
            android:id="@+id/iv_person_data_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="9dp"
            app:es_shape_type="round"
            tools:src="@drawable/ic_head_placeholder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginBottom="39.5dp"
            android:text="点击更换头像" />

    </LinearLayout>


    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_person_data_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/personal_data_name"
        app:bar_rightHint="@string/personal_data_name_hint"
        app:bar_rightIcon="@drawable/ico_go_black"
        app:bar_rightText="" />

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_person_data_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="签名"
        app:bar_rightHint="添加个性签名更加容易被关注"
        app:bar_rightIcon="@drawable/ico_go_black"
        app:bar_rightText="" />

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_person_data_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="性别"
        app:bar_rightHint="不显示"
        app:bar_rightIcon="@drawable/ico_go_black"
        app:bar_rightText="" />

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_person_data_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="生日"
        app:bar_rightHint="点击设置"
        app:bar_rightIcon="@drawable/ico_go_black"
        app:bar_rightText="" />

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_person_data_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/personal_data_address"
        app:bar_rightHint="@string/personal_data_address_hint"
        app:bar_rightIcon="@drawable/ico_go_black" />


</LinearLayout>