<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting_title" />

    <com.sam.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:bar_leftText="通用设置"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.sam.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:bar_leftText="消息通知"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_setting_update"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/setting_update">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_setting_update"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:text="new"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

    </com.sam.widget.layout.SettingBar>

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_setting_agreement"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:bar_leftText="@string/setting_agreement"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_setting_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/setting_cache"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.sam.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:bar_leftText="关于"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.sam.widget.layout.SettingBar
        android:id="@+id/sb_setting_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:bar_leftColor="@color/red"
        app:bar_leftText="@string/setting_exit" />

</LinearLayout>