<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/layout_fall_down"
        android:orientation="vertical"
        tools:layoutAnimation="@null">

        <com.hjq.bar.TitleBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layoutAnimation="@anim/layout_fall_down"
            android:orientation="vertical"
            tools:layoutAnimation="@null">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/register_title"
                android:textColor="@color/black60"
                android:textSize="23sp" />

            <com.sam.widget.view.RegexEditText
                android:id="@+id/et_register_phone"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_small_phone"
                android:drawablePadding="15dp"
                android:hint="@string/common_phone_input_hint"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:singleLine="true"
                app:regexType="mobile" />

            <View style="@style/HorizontalLineStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_register_code"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_small_safe"
                        android:drawablePadding="15dp"
                        android:hint="@string/common_code_input_hint"
                        android:inputType="number"
                        android:maxLength="@integer/sms_code_length"
                        android:singleLine="true" />

                    <View
                        style="@style/HorizontalLineStyle"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <com.sam.widget.view.CountdownView
                    android:id="@+id/cv_register_countdown"
                    style="@style/CountdownViewStyle" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register_password1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/suo"
                android:drawablePadding="15dp"
                android:hint="@string/register_password_hint1"
                android:maxLength="20"
                android:maxLines="1" />

            <View style="@style/HorizontalLineStyle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_round_chose_car"
                android:text="注册" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>