<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/layout_from_bottom"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity"
    tools:layoutAnimation="@null">

    <com.hjq.bar.TitleBar
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:backButton="true"
        app:barStyle="transparent"
        app:leftIcon="@drawable/close"
        app:rightColor="#333333"
        app:rightSize="16sp"
        app:rightTitle="注册"
        app:title="" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="快捷登录注册"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="未注册用户成功登录后即自动注册"
        android:textColor="#999999"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.sam.widget.view.RegexEditText
            android:id="@+id/et_user_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_small_phone"
            android:drawablePadding="15dp"
            android:hint="@string/common_phone_input_hint"
            android:inputType="textVisiblePassword"
            android:paddingStart="20dp"
            android:paddingTop="18dp"
            android:paddingEnd="20dp"
            android:paddingBottom="18dp"
            android:singleLine="true"
            app:regexType="mobile" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_user_code"
                style="@style/EditTextStyle"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_small_safe"
                android:drawablePadding="15dp"
                android:hint="@string/common_code_input_hint"
                android:inputType="number"
                android:maxLength="@integer/sms_code_length"
                android:paddingStart="20dp"
                android:paddingTop="18dp"
                android:paddingEnd="20dp"
                android:paddingBottom="18dp"
                android:singleLine="true" />

            <com.sam.widget.view.CountdownView
                android:id="@+id/cv_password_forget_countdown"
                style="@style/CountdownViewStyle" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_round_chose_car"
            android:text="@string/login_text" />
        <TextView
            android:id="@+id/password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="密码登录"
            android:textColor="#22DBB1"
            android:textSize="19sp" />
    </LinearLayout>

    <View
        android:id="@+id/v_login_blank"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="5" />

    <LinearLayout
        android:id="@+id/ll_login_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/login_other"
            android:textColor="@color/black50" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_width="60dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.sam.widget.view.ScaleImageView
            android:id="@+id/iv_login_qq"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:src="@drawable/ic_login_qq"
            android:visibility="gone"
            app:scaleRatio="1.2" />

        <com.sam.widget.view.ScaleImageView
            android:id="@+id/iv_login_wx"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:src="@drawable/ic_login_wx"
            android:visibility="gone"
            app:scaleRatio="1.2" />
    </LinearLayout>

</LinearLayout>